k8s/namespace.yaml
# namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cdm
  labels:
    name: cdm
